--- a/website/index.html
+++ b/website/index.html
@@ -141,8 +141,8 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Cloud Resume Challenge</h2>
-									<p>This site is created as the outcome of the cloud resume challange</p>
-										<p>Click the link below to find out how this site came to be.</p>
+									<p>This site is created as the outcome of the cloud resume challange<br>
+										Click the link below to find out how this site came to be.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
