--- a/website/index.html
+++ b/website/index.html
@@ -21,8 +21,8 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Matthew Erbacher</h1>
-						<p>Senior Systems Engineer<br>
-						 Technologist | Security | DevOps</p>
+						<p>Senior Systems Engineer</p>p>
+						<p>Technologist | Security | DevOps</p>
 					</header>
 
 				<!-- Nav -->
@@ -126,7 +126,7 @@
 									<h2>Skills, Education & Achievements</h2>
 								</header>
 								<p>Over 15,000+ end users supported over my 10+ year career<br>
-									Powershell / Okta / Azure / AWS / Office 365 / VMware / CI/CD / Terraform / Windows Server / Active Directory<br>
+									Powershell / Okta / Azure / AWS / Office 365 / VMware / Hyper-V / CI/CD / Terraform / Windows Server / Active Directory<br>
 									Developed & Implemented Okta phishing toolkit from the ground up<br>
 									<a href=https://medium.com/beyond-the-helpdesk/setting-up-and-configuring-storage-spaces-direct-in-windows-server-2016-4d2be85a8f7d>Designed and Implement Storage Spaces Direct</a> <br>
 									Advanced Diploma in Computer Systems Engineering - Chisholm Institute<br>
