--- a/website/index.html
+++ b/website/index.html
@@ -142,13 +142,14 @@
 								<header class="major">
 									<h2>Cloud Resume Challenge</h2>
 									<p>This site is created as the outcome of the cloud resume challange<br>
-										Click the link below to find out how this site came to be.</p>
+										Coming soon step by step of how this site was created</p>
 								</header>
-								<footer class="major">
+								<!--<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
+							-->
 							</section>
 
 					</div>
@@ -165,7 +166,7 @@
 							</dl>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/matthew-erbacher/" class="icon brands fa-linkedin alt"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/xmattehx/" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/xmattehx/aws-cloud-resume-challenge" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">©2023 Matthew Erbacher. All rights reserved </p>
