Comment out button

--- a/website/index.html
+++ b/website/index.html
@@ -30,7 +30,7 @@
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Past Experience</a></li>
-							<li><a href="#second">Education & Achievements</a></li>
+							<li><a href="#second">Skills, Education & Achievements</a></li>
 							<li><a href="#cta">Cloud Resume Challenge</a></li>
 						</ul>
 					</nav>
