--- a/website/index.html
+++ b/website/index.html
@@ -21,8 +21,8 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Matthew Erbacher</h1>
-						<p>Senior Systems Engineer</p>p>
-						<p>Technologist | Security | DevOps</p>
+						<p>Senior Systems Engineer<br>
+							Technologist | Security | DevOps</p>
 					</header>
 
 				<!-- Nav -->
@@ -31,7 +31,7 @@
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Past Experience</a></li>
 							<li><a href="#second">Skills, Education & Achievements</a></li>
-							<li><a href="#cta">Cloud Resume Challenge</a></li>
+							<!-- <li><a href="#cta">Cloud Resume Challenge</a></li> -->
 						</ul>
 					</nav>
 
@@ -116,6 +116,17 @@
 										<p>Maintained and supported G Suite</p>
 										<p>Designed emergency data recovery procedures</p>
 									</li>
+									<li>
+										<span class="icon solid major style4 fa-graduation-cap"></span>
+										<h2>MCKINNON SECONDARY COLLEGE</h2>
+										<h4>SPECIALIST TECHNICIAN</h4>
+										<h5>JANUARY 2012 TO FEBRUARY 2014</h5>
+										<p>Designed processes for mass rollout of BYOD devices.</p>
+										<p>Built deployment services for all provided devices (Windows, Mac, Linux)</p>
+										<p>Serviced various technical requirements for staff and students on a day to day basis</p>
+										<p>Maintained a fleet of 1000-1500 user devices</p>
+										<p>Maintained Active Directory and multiple authentication services</p>
+									</li>
 									
 								</ul>
 							</section>
@@ -141,8 +152,7 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Cloud Resume Challenge</h2>
-									<p>This site is created as the outcome of the cloud resume challange<br>
-										Coming soon step by step of how this site was created</p>
+									<p>This website is the fruition of the <a href="https://cloudresumechallenge.dev/docs/the-challenge/aws/">Cloud Resume Challenge</a>. Stay tuned for a detailed, step-by-step account of the creation process, coming soon!</p>
 								</header>
 								<!--<footer class="major">
 									<ul class="actions special">
