Caps to lower case for job titles

--- a/website/index.html
+++ b/website/index.html
@@ -71,7 +71,7 @@
 									</li>
 									<li>
 										<span class="icon solid major style2 fa-dice"></span>
-										<a href="https://greatcanadian.com/"><h2>GREAT CANADIAN GAMING CORPORATION</h2></a>
+										<a href="https://greatcanadian.com/"><h2>Great Canadian Gaming Corporation</h2></a>
 										<h4><b>IT INFRASTRUCTURE ENGINEER</b></h4>
 										<h5>MARCH 2020 TO MAY 2022</h5>
 										<p>Design, execute, maintain, and support multiple systems with networking aspects focusing on integration between system and network infrastructure components</p>
@@ -87,7 +87,7 @@
 									</li>
 									<li>
 										<span class="icon solid major style3 fa-dice"></span>
-										<a href="https://greatcanadian.com/"><h2>GREAT CANADIAN GAMING CORPORATION</h2></a>
+										<a href="https://greatcanadian.com/"><h2>Great Canadian Gaming Corporation</h2></a>
 										<h4><b>SYSTEMS ADMINISTRATOR</b></h4>
 										<h5>APRIL 2019 TO MARCH 2020</h5>
 										<p>Maintained and supported 6000+ users within an Office 365 environment</p>
@@ -100,7 +100,7 @@
 									</li>
 									<li>
 										<span class="icon solid major style5 fa-graduation-cap"></span>
-										<a href="https://www.mckinnonsc.vic.edu.au/"><h2>MCKINNON SECONDARY COLLEGE</h2></a>
+										<a href="https://www.mckinnonsc.vic.edu.au/"><h2>McKinnon Secondary College</h2></a>
 										<h4><b>SENIOR SYSTEMS ENGINEER</b></h4>
 										<h5>FEBRUARY 2014 TO FEBRUARY 2019</h5>
 										<p>Designed and implemented a wireless system rollout to support 3000+ devices</p>
@@ -117,7 +117,7 @@
 									</li>
 									<li>
 										<span class="icon solid major style4 fa-graduation-cap"></span>
-										<a href="https://www.mckinnonsc.vic.edu.au/"><h2>MCKINNON SECONDARY COLLEGE</h2></a>
+										<a href="https://www.mckinnonsc.vic.edu.au/"><h2>McKinnon Secondary College</h2></a>
 										<h4><b>SPECIALIST TECHNICIAN</b></h4>
 										<h5>JANUARY 2012 TO FEBRUARY 2014</h5>
 										<p>Designed processes for mass rollout of BYOD devices.</p>
