--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Matthew Erbacher</h1>
 						<p>Senior Systems Engineer<br>
-							Technologist | Security | Leadership</p>
+						Technologist | Security | Leadership</p>
 					</header>
 
 				<!-- Nav -->
@@ -151,7 +151,7 @@
 									<b>LAPS (Local Administrator Password Solution):</b> Ensuring secure local administrator password management.<br>
 								</p>
 								<header class="major">
-								<h2>Notable Achievements:</h2>
+								<h2>Notable Achievements</h2>
 								</header>
 									<b>Developed & Implemented Okta Phishing Toolkit:</b> Innovatively crafted and executed a comprehensive toolkit for Okta, bolstering defenses against phishing threats.<br>
 								
