--- a/website/index.html
+++ b/website/index.html
@@ -143,7 +143,7 @@
 									<!--<b>Terraform and Ansible:</b> Leveraging infrastructure as code tools for efficient and consistent deployment, configuration, and management of cloud and on-premises resources.<br>-->
 									<b>Office 365:</b> Maximizing collaborative potential through cutting-edge cloud tools.<br>
 									<b>VMware / Hyper-V:</b> Orchestrating virtualization strategies for optimal resource utilization.<br>
-									<b>Windows Server:</b> Implementing comprehensive solutions to fortify server infrastructures.<br>
+									<b>Windows Server:</b> Implementing comprehensive solutions to fortify server infrastructure.<br>
 									<b>Active Directory:</b> Managing and optimizing robust directory services.<br>
 									<b>Mikrotik / Cisco / Palo Alto:</b> Steering networking capabilities for reliable connectivity and heightened security.<br>
 									<b>Linux:</b> Proficiently navigating open-source environments.<br>
