Updated in cert in progress

--- a/website/index.html
+++ b/website/index.html
@@ -174,8 +174,7 @@
 									MikroTik Certified Traffic Control Engineer (MTCTCE)<br>
 									MikroTik Certified Routing Engineer (MTCRE)</p>
 									<h4><b>In Progress</b></h4>
-									<p>AWS Certified Solutions Architect<br>
-									All things DevOps</p>
+									<p>Azure Administrator / Azure Devops</p>
 
 							</section>
 
