--- a/website/index.html
+++ b/website/index.html
@@ -174,7 +174,7 @@
 									MikroTik Certified Traffic Control Engineer (MTCTCE)<br>
 									MikroTik Certified Routing Engineer (MTCRE)</p>
 									<h4><b>In Progress</b></h4>
-									<p>Azure Administrator / Azure Devops</p>
+									<p>Azure Administrator / Azure DevOps</p>
 
 							</section>
 
