Update tf code / update website

--- a/website/index.html
+++ b/website/index.html
@@ -140,7 +140,7 @@
 									<b>Powershell:</b> Scripting finesse for streamlined automation.<br>
 									<b>Okta / Azure MFA / SSO:</b> Navigating the complexities of identity and access management.<br>
 									<b>Azure / AWS / GCP:</b> Orchestrating scalable solutions within dynamic cloud environments.<br>
-									<!--<b>Terraform and Ansible:</b> Leveraging infrastructure as code tools for efficient and consistent deployment, configuration, and management of cloud and on-premises resources.<br>-->
+									<b>Terraform and Ansible:</b> Leveraging infrastructure as code tools for efficient and consistent deployment, configuration, and management of cloud and on-premises resources.</b>
 									<b>Office 365:</b> Maximizing collaborative potential through cutting-edge cloud tools.<br>
 									<b>VMware / Hyper-V:</b> Orchestrating virtualization strategies for optimal resource utilization.<br>
 									<b>Windows Server:</b> Implementing comprehensive solutions to fortify server infrastructure.<br>
