--- a/website/index.html
+++ b/website/index.html
@@ -66,7 +66,7 @@
 										<p>Direct IT security initiatives (Okta/LAPS/Netwrix/Windows Hello for Business) to elevate organizational security standing</p>
 										<p>Enforce CIS/STIG compliance framework on Active Directory, Windows and Windows Server for more than 800 endpoints</p>
 										<p>Develop and oversee a comprehensive Okta phishing test toolkit tailored for internal phishing campaign assessments</p>
-										<p>Oversee and sustain Entra ID (Azure), Active Directory, DHCP, DNS, GPO and PKI services</p>
+										<p>Oversee and sustain Azure, Active Directory, DHCP, DNS, GPO and PKI services</p>
 										<p>Establish and implement a remote playtest environment for game development teams, spanning on-premises, AWS, GCP, and Parsec platforms</p>
 									</li>
 									<li>
